--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 1em;
-    margin: 0.5em;
+    margin: 0.5em 0.5em 0em 0.25em;
     width: 100%;
 
 
@@ -87,6 +87,7 @@ img {
 
 .navigation {
     @media (max-width: 768px) {
+        max-width: 100%;
         margin-top: 1em;
     }
 }
@@ -101,6 +102,8 @@ img {
 
     @media (max-width: 768px) {
         justify-content: space-around;
+        max-width: 100%;
+        margin: 0em 1em 0em 1em;
     }
 }
 
@@ -108,6 +111,10 @@ img {
 
 .navigation>ul>li {
     margin: 0em 1em;
+
+    @media (max-width: 600px) {
+        margin: 0;
+    }
 }
 
 
@@ -119,6 +126,7 @@ nav>ul>li>a {
 
 @media (max-width: 600px) {
     front-size: 1em;
+    margin: 0.5em;
 }
 }
 
