--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 :root {
-    --couleur-fond:#ccd5ff;
-    --couleur-livre: #e4e9feda;
+    --color-fir:#18534F;
+    --color-melon: #226D68;
+    --color-fond: #e4e9feda;
+    --corlor-article: #FEEAA1;
     --couleur-ombre: #1d2131;
-    --couleur-button-fond: #54f98d;
-    --couleur-button-police: #ffffff;
+    --color-button-fond: #54f98d;
+    --color-button-text: #ffffff;
+    --color-text: #ffffff;
 } 
 
 
@@ -28,29 +31,31 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    background-color: var(--couleur-fond);
+    background-color: var(--color-fond);
 }
 
 
 
 header {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
     padding: 1em;
     margin: 0.5em 0.5em 0em 0.25em;
     width: 100%;
-
-
-    background-color: var(--couleur-livre);
+    background-color: var(--color-fir);
     border-radius: 1.5rem;
+
+
+    /*background-color: var(--color-fir);
     box-shadow: 0.5rem 0.5rem var(--couleur-ombre);
-    border: 0.15rem solid var(--couleur-ombre);
+    border: 0.15rem solid var(--couleur-ombre);*/
 
 
-    @media (max-width: 768px) {
+    @media (min-width: 768px) {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
     }        
 }
 
@@ -59,26 +64,29 @@ header {
 .logo {
     display: flex;
     flex-direction: column;
-    max-width: 30%;
     height: auto;
-    text-align: left;
     font-size: 0.85em;
+    color: var(--color-text);
+    max-width: 100%;
+    text-align: center;
+    font-size: 0.85em;
+    align-items: center;
 
-    @media (max-width: 768px) {
-        max-width: 100%;
-        align-items: center;
-        font-size: 0.85em;
-        text-align: center;
+
+    @media (min-width: 768px) {
+    max-width: 30%;
+    text-align: left;
+    font-size: auto;
+    align-items: flex-start;
     }
 }
 
 
-
 img {
-    max-width: 100%;
+    max-width: 40%;
 
-    @media (max-width: 768px) {
-        max-width: 40%;
+    @media (min-width: 768px) {
+        max-width: 100%;
         
     }
 }
@@ -86,9 +94,12 @@ img {
 
 
 .navigation {
-    @media (max-width: 768px) {
         max-width: 100%;
         margin-top: 1em;
+
+    @media (min-width: 768px) {
+        max-width: 100%;
+        margin-top: 0em;
     }
 }
 
@@ -96,44 +107,44 @@ img {
 
 .navigation>ul {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     max-width: 100%;
     list-style: none;
+    margin: 0em 1em 0em 1em;
 
-    @media (max-width: 768px) {
-        justify-content: space-around;
-        max-width: 100%;
-        margin: 0em 1em 0em 1em;
+    @media (min-width: 768px) {
+        justify-content: space-between;
+        margin: 0em 0em 0em 0em;
     }
 }
 
 
 
 .navigation>ul>li {
-    margin: 0em 1em;
+    margin: 0em;
 
-    @media (max-width: 600px) {
-        margin: 0;
+    @media (min-width: 600px) {
+        margin: 0em 1em;
     }
 }
 
 
 nav>ul>li>a {
-    margin : 1em;
+    margin : 0.5em;
     text-decoration: none;
     padding: 0.5em;
+    font-size: 1em;
 
 
-@media (max-width: 600px) {
-    front-size: 1em;
-    margin: 0.5em;
+@media (min-width: 600px) {
+    margin: 1em;
 }
 }
 
 
 
 a:hover {
-    background-color: var(--couleur-button-fond);
-    color: var(--couleur-button-police);
+    background-color: var(--color-button-fond);
+    color: var(--color-button-text);
     border-radius: 0.75rem;
 }
