Add HTML/CSS for footer and img for burger menu on image database

--- a/style.css
+++ b/style.css
@@ -148,3 +148,31 @@ a:hover {
     color: var(--color-button-text);
     border-radius: 0.75rem;
 }
+
+
+footer {
+    background-color: #18534F ;
+    color: #ffffff;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+    @media screen and (min-width: 1008px) {
+        block-size: 10vh;
+    }
+}
+
+footer>article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+
+    @media screen and (min-width: 1008px) {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+}
+
+footer>article>p {
+    padding: 1em;
+}
