--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 
 
 
-/*Entête de site - Partie Header*/
+/*Partie Header*/
 
 header {
     display: flex;
@@ -152,6 +152,10 @@ a:hover {
 }
 
 
+
+/*Partie Main*/
+
+
 .restaurant-card {
     display: flex;
     align-items: center;
@@ -160,6 +164,7 @@ a:hover {
     padding: 10px;
     max-width: 800px;
     margin: 20px auto;
+    background-color: var(--corlor-article);
   }
   
   .photo-plat {
@@ -193,11 +198,26 @@ a:hover {
   }
   
   .restaurant-details li {
-    margin-bottom: 5px;
-    
-    
+    margin: 0.33em 0em 0.33em 0em;
+    display: flex;
+    align-items: center;
   }
-  
+
+
+
+  .restaurant-details>li>h3 {
+    padding: 0em 0em 0em 0.5em;
+  }
+
+
+
+  .liste-plat {
+    font-size: 16px;
+    font-weight: normal;
+    margin: 0;
+  }
+
+
   .icon-image {
     width: 20px;
     height: 20px;
@@ -209,13 +229,17 @@ a:hover {
   .restaurant-contact {
     text-align: right;
     border: 1px solid #000;
-    border-radius: 10px;
-    padding: 10px;
+    border-radius: 1rem;
+    padding: 0.63rem;
   }
   
   .restaurant-contact p {
     margin: 5px 0;
   }
+
+
+
+/*Partie Footer*/
 
 footer {
     background-color: #18534F ;
