--- a/style.css
+++ b/style.css
@@ -155,47 +155,85 @@ a:hover {
 
 /*Partie Main*/
 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-direction: center;
+}
+
+
 
 .restaurant-card {
-    display: flex;
-    align-items: center;
-    border: 2px solid #000;
-    border-radius: 15px;
-    padding: 10px;
-    max-width: 800px;
-    margin: 20px auto;
+    display: grid;
+    grid-template-columns: 60% 40%;
+    grid-template-rows: 5em 1fr;
     background-color: var(--corlor-article);
+    border-radius: 1em;
+    margin: .63em;
   }
   
-  .photo-plat {
-    width: 150px;
-    height: 150px;
-    border: 1px solid #000;
-    border-radius: 10px;
-    overflow: hidden;
-    margin-right: 20px;
+
+
+   .restaurant-name {
+    padding: 0.63em;
+    margin-bottom: .5em;
+    grid-column: span 2;
+    display: flex;
+    justify-content: center;
   }
-  
-  .photo-plat img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .restaurant-info {
-    flex-grow: 1;
-  }
-  
-  .restaurant-name {
-    padding: 10px;
-    margin-bottom: 35px;
-  }
-  
+
+
+
   .restaurant-details {
     list-style-type: none;
     padding: 0;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 1em 0.5em 1em 1em;
   }
+
+
+
+  .photo-plat {
+    max-width: 100%;
+    max-height: 100%;
+    border: 1px solid #000;
+    border-radius: 0.63em;
+    overflow: hidden;
+    margin: 1em 1em 1em 0.5em;
+  }
+
+
+
+.photo-plat>img {
+    min-width: 100%;
+    min-height: 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+
+  .icon-image {
+    width: 1.3em;
+    height: 1.3em;
+    object-fit: contain;
+  }
+
+
+
+ .restaurant-contact {
+    display: none;
+    text-align: right;
+    border: 1px solid #000;
+    border-radius: 1rem;
+    padding: 0.63rem;
+  }
+  
+
   
   .restaurant-details li {
     margin: 0.33em 0em 0.33em 0em;
@@ -207,39 +245,14 @@ a:hover {
 
   .restaurant-details>li>h3 {
     padding: 0em 0em 0em 0.5em;
-  }
-
-
-
-  .liste-plat {
     font-size: 16px;
     font-weight: normal;
     margin: 0;
   }
 
 
-  .icon-image {
-    width: 20px;
-    height: 20px;
-    object-fit: contain;
-    
 
-  }
-  
-  .restaurant-contact {
-    text-align: right;
-    border: 1px solid #000;
-    border-radius: 1rem;
-    padding: 0.63rem;
-  }
-  
-  .restaurant-contact p {
-    margin: 5px 0;
-  }
-
-
-
-/*Partie Footer*/
+ /*Partie Footer*/
 
 footer {
     background-color: #18534F ;
