--- a/style.css
+++ b/style.css
@@ -20,8 +20,7 @@
 
 
 html, body {
-    height: 100%;
-    margin-right: 0.5em;
+    height: 100%;   
 }
 
 
@@ -41,11 +40,12 @@ body {
 header {
     display: flex;
     flex-direction: column;
-    padding: 1em;
-    margin: 0.5em 0.5em 0em 0.25em;
+    
+    
     width: 100%;
     background-color: var(--color-fir);
-    border-radius: 1.5rem;
+    padding: 1em;
+    
 
 
     /*background-color: var(--color-fir);
@@ -96,59 +96,61 @@ img {
 
 
 .navigation {
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 300px;
+        height: 500px;
         max-width: 100%;
-        margin-top: 1em;
+        background-color: var(--color-fir);
+        transform: translateX(100%);
+        transition: 0.3s transform ease-in-out;
+        
 
-    @media (min-width: 768px) {
-        max-width: 100%;
-        margin-top: 0em;
-    }
+
+        @media (min-width: 768px) {
+            display: none;
+        }
+        
 }
 
+.navigation.open {
+    transform: initial;
+}
 
-
-.navigation>ul {
+.navigation ul {
     display: flex;
-    justify-content: space-around;
-    max-width: 100%;
+    flex-direction: column;
+    width: 300px;
+    height: 400px;
     list-style: none;
-    margin: 0em 1em 0em 1em;
+    align-items: center;
+    justify-content: center;
+    gap: 2em;
 
     @media (min-width: 768px) {
-        justify-content: space-between;
-        margin: 0em 0em 0em 0em;
+        width: 700px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
     }
 }
 
-
-
-.navigation>ul>li {
-    margin: 0em;
-
-    @media (min-width: 600px) {
-        margin: 0em 1em;
-    }
-}
-
-
-nav>ul>li>a {
-    margin : 0.5em;
+.navigation ul li a {
     text-decoration: none;
-    padding: 0.5em;
-    font-size: 1em;
+    color: #ffffff;
+    margin: 2em;
+}
 
 
-@media (min-width: 600px) {
-    margin: 1em;
-}
-}
 
 
 
 a:hover {
     background-color: var(--color-button-fond);
     color: var(--color-button-text);
-    border-radius: 0.75rem;
+    border-radius: 1rem;
 }
 
 
@@ -170,6 +172,7 @@ main {
     grid-template-rows: 5em 1fr;
     background-color: var(--corlor-article);
     border-radius: 1em;
+    border: solid 2px #000;
     margin: .63em;
   }
   
@@ -279,4 +282,33 @@ footer>article {
 
 footer>article>p {
     padding: 1em;
+}
+
+/* Menu burger */
+
+.menu_burger {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: 1em;
+    right: 1em;
+    z-index: 1000;
+    display: block;
+
+    @media (min-width: 768px) {
+        display: none;
+    }
+}
+
+.close_burger {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    top: 1em;
+    right: 1em;
+    z-index: 1000;
+
+    @media (min-width: 768px) {
+        display: none;
+    }
 }
