--- a/style.css
+++ b/style.css
@@ -174,8 +174,29 @@ main {
     border-radius: 1em;
     border: solid 2px #000;
     margin: .63em;
+    max-width: 1590px;
+    max-height: 284px;
   }
-  
+    @media (min-width: 768px) and (max-width: 992px) {
+    .restaurant-card {
+    grid-template-columns: 30% 50% 20%;
+    grid-template-rows: 5em 1fr; 
+    }
+ }
+
+    @media (min-width: 992px) and (max-width: 1200px) {
+    .restaurant-card {
+    grid-template-columns: 30% 55% 15%;
+    grid-template-rows: 5em 1fr; 
+    }
+ }
+
+    @media (min-width: 1200px) {
+    .restaurant-card {
+    grid-template-columns: 20% 67% 13%;
+    grid-template-rows: 5em 1fr; 
+    }
+ }
 
 
    .restaurant-name {
@@ -184,6 +205,12 @@ main {
     grid-column: span 2;
     display: flex;
     justify-content: center;
+
+    @media (min-width: 768px) {
+    grid-column: span 3;
+    grid-column: 1/4;
+    grid-row: 1/2;
+    }
   }
 
 
@@ -195,6 +222,11 @@ main {
     flex-direction: column;
     justify-content: center;
     margin: 1em 0.5em 1em 1em;
+
+    @media (min-width: 768px) {
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
   }
 
 
@@ -230,14 +262,49 @@ main {
 
  .restaurant-contact {
     display: none;
+  }
+
+  @media (min-width: 768px) and (max-width: 992px) {
+    .restaurant-contact {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     text-align: right;
     border: 1px solid #000;
     border-radius: 1rem;
     padding: 0.63rem;
+    margin: 0.7em;
+    }
+  }
+
+  @media (min-width: 992px) and (max-width: 1200px) {
+    .restaurant-contact {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: right;
+    border: 1px solid #000;
+    border-radius: 1rem;
+    padding: 0.63rem;
+    margin: 0.85em;
+    }
+  }
+
+  @media (min-width: 1200px) {
+    .restaurant-contact {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: right;
+    border: 1px solid #000;
+    border-radius: 1rem;
+    padding: 0.63rem;
+    margin: 1em;
+    }
   }
   
 
-  
+
   .restaurant-details li {
     margin: 0.33em 0em 0.33em 0em;
     display: flex;
